examples/test/testpolicy17531.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17531
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key4: value41
      key9: value46
      key12: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value40
          key23: value25
          key39: value6
      podSelector:
        matchLabels:
          key10: value32
          key6: value1
